--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,18 @@ html {
 /* Header and nav */
 
 nav {
-    height: 10vh;
+    height: 5vh;
+    width: 100%;
     background-color: midnightblue;
     position: relative;
-    z-index: 20;
+    z-index: 100;
+}
+
+.social-nav {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .menu-links {
@@ -30,9 +38,9 @@ nav {
     list-style-type: none;
     flex-direction: column;
     background-color: midnightblue;
-    clip-path: circle(0px);
-    --webkit-clip-path: circle(0px);
-    transition: all 1s ease-out;
+    clip-path: inset(0 0 100% 0);
+    --webkit-clip-path: inset(0 0 100% 0);
+    transition: all 0.75s ease-out;
     pointer-events: none;
 }
 
@@ -54,7 +62,12 @@ nav {
 }
 
 .menu-links.open {
-    clip-path: circle(1000px);
-    --webkit-clip-path: circle(1000px);
+    clip-path: inset(0 0 0 0);
+    --webkit-clip-path: inset(0 0 0 0);
     pointer-events: all;
+}
+
+.fab, .far {
+    color: white;
+    font-size: 2rem;
 }
