--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,46 @@
+/* Colors and fonts */
+:root {
+    --blue: #0F2862;
+    --red: #9E363A;
+    --dark-blue: #091F36;
+    --grey-blue: #4F5F76;
+    --white: #FFF;
+
+}
+
+@font-face {
+    font-family: 'Lato';
+    font-style: italic;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/lato/v17/S6u8w4BMUTPHjxsAXC-q.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/lato/v17/S6uyw4BMUTPHjx4wXg.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/lato/v17/S6u9w4BMUTPHh6UVSwiPGQ.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 /* General styling */
 
 html {
     box-sizing: border-box;
     font-size: 16px;
+    font-family: "Lato", sans-serif;
 }
 
 *, *:before, *:after {
@@ -11,20 +49,32 @@ html {
     padding: 0;
 }
 
+body {
+    background-color: var(--dark-blue);
+    color: var(--white);
+}
+
 /* Header and nav */
 
 nav {
-    height: 5vh;
+    height: 4vh;
     width: 100%;
-    background-color: midnightblue;
-    position: relative;
-    z-index: 100;
+    position: fixed;
+    display: flex;
 }
 
-.social-nav {
+.navbar{
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    align-content: center;
+    align-items: center;
+}
+
+.social-nav {
+    width: 15%;
+    display: flex;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -37,7 +87,7 @@ nav {
     align-items: center;
     list-style-type: none;
     flex-direction: column;
-    background-color: midnightblue;
+    background-color: var(--blue);
     clip-path: inset(0 0 100% 0);
     --webkit-clip-path: inset(0 0 100% 0);
     transition: all 0.75s ease-out;
@@ -46,18 +96,20 @@ nav {
 
 .menu-items {
     text-decoration: none;
-    color: white;
     font-size: 4rem;
+    color: var(--white);
 }
 
 .hamburger {
     cursor: pointer;
+    margin-right: 2%;
+    z-index: 100;
 }
 
 .line {
     width: 30px;
     height: 3px;
-    background: white;
+    background: var(--white);
     margin: 8px;
 }
 
@@ -65,9 +117,50 @@ nav {
     clip-path: inset(0 0 0 0);
     --webkit-clip-path: inset(0 0 0 0);
     pointer-events: all;
+    z-index: 50;
 }
 
 .fab, .far {
-    color: white;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    z-index: 100;
 }
+
+/* Main */
+main {
+    display: grid;
+    grid-template: repeat(5, 1fr) / 1fr;
+}
+
+.main-section {
+    height: 100vh;
+    width: 100%;
+    display: grid;
+    grid-template: 1fr / 4.5fr 5.5fr;
+}
+
+.main-section h1 {
+    font-size: 5rem;
+}
+
+.main-section h2 {
+    font-size: 1.5rem;
+    font-weight: 100;
+}
+
+/* Banner */
+ {
+
+}
+
+/* Project 1 */
+
+
+
+/* Project 2 */
+
+
+/* Contact */
+
+
+
+/* Footer */
